# meat-and-bone

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  blah.html  images.html  index.html  main.cpp  maintest.cpp  test.cpp
Testdata/: mim.stl  mim2.stl  mimmim.stl
Testdata/Bone example/: reference.stl  reference_reduced.stl  work.stl  work_reduced.stl  work_smooth.stl
Testdata/test/: Test.mix
cmake/: FindLIBIGL.cmake
meat_and_bone/: interpolate.cpp  interpolate.h  laplace_smooth.cpp  laplace_smooth.h  make_bitangents.cpp  make_bitangents.h  make_skirt.cpp  make_skirt.h  make_solid.cpp  make_solid.h  skirt.cpp  skirt.h  thicken.cpp  thicken.h
x3d_files/: sagital cut.x3d
